Use Class.getConstructor().newInstance() instead of Class.newInstance() in order to handle exceptions thrown from ctors properly.
git-svn-id: https://svn.code.sf.net/p/vassalengine/svn/VASSAL-src/trunk@3916 67b53d14-2c14-4ace-a08f-0dab2b34000c